# r8brain-free-src

./: .clang-format  .gitignore  CMakeLists.txt
src/other/: calcCorrTable.cpp  calcErrorTable.cpp  genhbc.cpp
src/pffft_double/: CMakeLists.txt
src/r8brain-free/: CMakeLists.txt
src/r8brain-free-dll/: r8bsrc.cpp  r8bsrc.h
src/r8brain-free-example/: CMakeLists.txt  example.cpp
src/r8brain-free-src/: CDSPFIRFilter.h  CDSPResampler.h  pffft.cpp  r8bbase.h  r8bconf.h
src/r8brain-free-src-dll/: r8bsrc.cpp
src/r8brain-free-src-example/: CMakeLists.txt  CWaveFile.hpp  example.cpp
